extract from html and split js in pieces

--- a/project/docu/static/index.html
+++ b/project/docu/static/index.html
@@ -40,214 +40,9 @@
 		<h1>Logout</h1>
 		<button type="submit">Logout</button>
 	</form>
-</body>
-	<script>
-		let myInterval;
-		async function fetchPOST(url, data)
-		{
-			try
-			{
-				rawResponse = await fetch(url, {
-					method: "POST", // *GET, POST, PUT, DELETE, etc.
-					mode: "cors", // no-cors, *cors, same-origin
-					cache: "no-cache", // *default, no-cache, reload, force-cache, only-if-cached
-					credentials: "same-origin", // include, *same-origin, omit
-					headers: {
-					"Content-Type": "application/json",
-					// 'Content-Type': 'application/x-www-form-urlencoded',
-					},
-					redirect: "follow", // manual, *follow, error
-					referrerPolicy: "no-referrer", // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
-					body: JSON.stringify(data), // body data type must match "Content-Type" header			
-				})
-				const content = await rawResponse.json();
-				return content;
-			}
-			catch (err)
-			{
-				console.error(err);
-			}
-		}
-
-		SignupEl = document.getElementById("signupForm");
-		LoginEl = document.getElementById("loginForm");
-		RefreshEl = document.getElementById("refreshForm");
-		LogoutEl = document.getElementById("logoutForm");
-		UserBoxEl = document.getElementById("userbox");
-		UserDisplayEl = document.getElementById("userdisplay");
-
-		refreshVisibility = async () => 
-		{
-			data = await localStorage.getItem("transcendence")
-			data = JSON.parse(data);
-			const notlogged = (! data || !data['access'] || !data['refresh'] || !data['username'])
-			SignupEl.style.display = !notlogged ? "none" : "block";
-			LoginEl.style.display = !notlogged ? "none" : "block";
-			RefreshEl.style.display = notlogged ? "none" : "block";
-			LogoutEl.style.display = notlogged ? "none" : "block";
-			UserBoxEl.style.display = notlogged ? "none" : "block";
-			if (!data || !data['username'])
-				UserDisplayEl.innerText = "null";
-			else
-				UserDisplayEl.innerText = data['username'];
-		}
-
-		requestSignup = async (e) => {
-			e.preventDefault()
-			const data = {}
-			const collection = e.target.getElementsByTagName("input");
-			Array.prototype.slice.call(collection).forEach(element => {
-					data[element.name] = element.value
-				});
-			url="/api/token/signup/"
-			fetchPOST(url, data).then(async (content) => {
-				Object.keys(content).forEach( (obkey) => {
-				console.log(obkey, ":", content[obkey].toString())
-				});
-				if ( obkeys.includes('access') 
-				&& obkeys.includes('refresh')
-				&& obkeys.includes('username') )
-				{
-					localStorage.setItem("transcendence", 
-						JSON.stringify({
-							'access': content['access'],
-							'refresh': content['refresh'],
-							'username': content['username'],
-						}));
-				}
-				else
-					localStorage.removeItem("transcendence");
-				e.target.reset();
-				await refreshVisibility();
-				myInterval = setInterval(requestRefresh, 10000);
-			});
-		}
-
-		requestLogin = async (e) => {
-			e.preventDefault()
-			const data = {}
-			const collection = e.target.getElementsByTagName("input");
-			Array.prototype.slice.call(collection).forEach(element => {
-					data[element.name] = element.value
-				});
-			url="/api/token/"
-			fetchPOST(url, data).then(async (content) => {
-				obkeys = Object.keys(content);
-				obkeys.forEach( async (obkey) => {
-				console.log(obkey, ":", content[obkey].toString())
-				});
-				if ( obkeys.includes('access') 
-					&& obkeys.includes('refresh')
-					&& obkeys.includes('username') )
-				{
-					localStorage.setItem("transcendence", 
-						JSON.stringify({
-							'access': content['access'],
-							'refresh': content['refresh'],
-							'username': content['username'],
-						}));
-					}
-				else
-					localStorage.removeItem("transcendence");
-				e.target.reset();
-				await refreshVisibility();
-				myInterval = setInterval(requestRefresh, 240000);
-			});
-		}
-
-		requestRefresh = async () => {
-			data = await localStorage.getItem("transcendence")
-			data = JSON.parse(data);
-			if (! data || !data['refresh'])
-			{
-				localStorage.removeItem("transcendence");
-				return ;
-			}
-			data = { 'refresh': data['refresh']}
-			url="/api/token/refresh/"
-			fetchPOST(url, data).then(async (content) => {
-				obkeys = Object.keys(content);
-				obkeys.forEach( (obkey) => {
-				console.log(obkey, ":", content[obkey].toString())
-				});
-				if ( obkeys.includes('access') 
-					&& obkeys.includes('refresh')
-					&& obkeys.includes('username') )
-				{
-					localStorage.setItem("transcendence", 
-						JSON.stringify({
-							'access': content['access'],
-							'refresh': content['refresh'],
-							'username': content['username'],
-						}));
-				}
-				else
-					localStorage.removeItem("transcendence");
-				await refreshVisibility();
-			});
-		}
-
-		requestRefreshFromForm = async (e) =>
-		{
-			e.preventDefault();
-			requestRefresh();
-		}
-
-		requestLogout = async (e) => {
-			e.preventDefault()
-			data = await localStorage.getItem("transcendence")
-			data = JSON.parse(data);
-			if (! data || !data['access'])
-			{
-				localStorage.removeItem("transcendence");
-				return ;
-			}
-			data = { 'access': data['access']}
-			url="/api/token/logout/"
-			fetchPOST(url, data).then(async (content) => {
-				Object.keys(content).forEach( (obkey) => {
-				console.log(obkey, ":", content[obkey].toString())
-				});
-				localStorage.removeItem("transcendence");
-				await refreshVisibility();
-				if (myInterval)
-					clearInterval(myInterval);
-			});
-		}
-
-
-		startPage = async (e) => {
-			SignupEl.addEventListener("submit", requestSignup );
-			LoginEl.addEventListener("submit", requestLogin );
-			RefreshEl.addEventListener("submit", requestRefreshFromForm);
-			LogoutEl.addEventListener("submit", requestLogout);
-
-			await refreshVisibility();
-			const base_url =  window.location.hostname + ":" + window.location.port
-			console.log (base_url);
-			const token = 'omoreno-';
-			
-			const websocket = new WebSocket( 'ws://' + base_url + '/ws/')
-			
-			websocket.onopen = function(event){
-				console.log('client says connection opened')
-				websocket.send("Client sends Welcome")
-			}
-			
-			websocket.onmessage = function(event){
-				console.log("message received: ", event)
-				data = JSON.parse.data
-				console.log(data)
-
-			}
-
-			websocket.onclose = function(event){
-				console.log('client says connection closed')
-			}
-
-		}
-
-		startPage();
-	</script>
+	<script src="fetch_util.js"></script>
+	<script src="userlog.js"></script>
+	<script src="ws_init.js"></script>
+	<script src="start_page.js"></script>
 </body>
 </html>
