working on fetching matches

--- a/project/docu/static/index.html
+++ b/project/docu/static/index.html
@@ -40,6 +40,8 @@
 		<h1>Logout</h1>
 		<button type="submit">Logout</button>
 	</form>
+	<div id="content_space" class="container m-3 p-3 border">
+	</body>
 	<script src="ws_init.js"></script>
 	<script src="fetch_util.js"></script>
 	<script src="userlog.js"></script>
